--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node",
   "version": "1.0.0",
-  "description": "",
+  "description": "just for learning",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/YuluaOkrushko/Node.js/issues"
   },
-  "homepage": "https://github.com/YuluaOkrushko/Node.js#readme"
+  "homepage": "https://github.com/YuluaOkrushko/Node.js#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.7",
+    "yargs": "^16.2.0"
+  }
 }
