--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "nodemon": "^2.0.7",
     "yargs": "^16.2.0"
+  },
+  "dependencies": {
+    "shortid": "^2.2.16"
   }
 }
